Would help to start CouchDB on Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,7 @@ before_script:
   - sudo service apache2 restart
   
   # CouchDB configuration
+  - sudo service couchdb start
   - curl -X PUT "http://localhost:5984/ocr"
   - curl -X PUT "http://localhost:5984/ocr/_design/page" -H "Content-Type:application/json" -d@.travis/couchdb/page.json
   - curl -X PUT "http://localhost:5984/ocr/_design/textDiff" -H "Content-Type:application/json" -d@.travis/couchdb/textDiff.json
