Add Twitter as OAuth option, add authenticated user setting

--- a/config/config.inc.php.sample
+++ b/config/config.inc.php.sample
@@ -24,6 +24,9 @@ defined("DB_PASS") || define("DB_PASS", null);
 //OAuth Public Key
 defined("OAUTH_KEY") || define("OAUTH_KEY", "");
 
+//OAuth Provider
+defined("OAUTH_PROVIDER") || define("OAUTH_PROVIDER", "google_plus");
+
 date_default_timezone_set('UTC');
 
 ?>
