--- a/config/config.php.sample
+++ b/config/config.php.sample
@@ -1,5 +1,8 @@
 <?php
 
+// root directory
+defined("ROOT") || define("ROOT", dirname(__DIR__));
+
 //local app for testing
 defined("HTTP_HOST") || define("HTTP_HOST", "http://www.ocr-correction.local/");
 
@@ -31,5 +34,3 @@ defined("OAUTH_KEY") || define("OAUTH_KEY", "");
 defined("OAUTH_PROVIDER") || define("OAUTH_PROVIDER", "google_plus");
 
 date_default_timezone_set('UTC');
-
-?>
