--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
     "require": {
       "doctrine/couchdb"         : "@dev",
       "phroute/phroute"          : "2.*",
-      "twig/twig"                : "~1.0"
+      "twig/twig"                : "~1.0",
+      "chh/optparse"             : "*@dev"
     },
     "require-dev": {
       "phpunit/phpunit"          : "5.4.*",
