--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,7 @@ before_script:
   - sudo service apache2 restart
   
   # CouchDB configuration
-  - sudo service couchdb start
+  - sudo service couchdb restart
   - curl -X PUT localhost:5984/ocr
   - curl -X PUT localhost:5984/ocr/_design/page -H "Content-Type:application/json" -d@.travis/couchdb/page.json
   - curl -X PUT localhost:5984/ocr/_design/textDiff -H "Content-Type:application/json" -d@.travis/couchdb/textDiff.json
