--- a/.travis.yml
+++ b/.travis.yml
@@ -18,10 +18,9 @@ services:
 
 before_install:
   - sudo apt-get update
+  - sudo apt-get install build-essential apache2 libapache2-mod-fastcgi php-fpm gettext autoconf
 
 install:
-  - sudo apt-get install build-essential apache2 libapache2-mod-fastcgi php5-fpm gettext autoconf
-
   # PHP configuration
   - phpenv config-add .travis/travis.php.ini
   - phpenv rehash
