--- a/config/config.test.php.sample
+++ b/config/config.test.php.sample
@@ -24,6 +24,9 @@ defined("DB_USER") || define("DB_USER", null);
 // CouchDB password
 defined("DB_PASS") || define("DB_PASS", null);
 
+// DjVu & png public URL path without leading slash, with trailing slash
+defined("DJVU_PATH") || define("DJVU_PATH", "public/examples/");
+
 // Allow (or not) anonymous editing
 defined("PERMIT_ANON") || define("PERMIT_ANON", true);
 
